# duct

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: nightly.yml
cmake/: duct.pc.in  ductConfig.cmake.in  duct_version.h.in
examples/: async_example.cc  convenience_example.cc  duct_echo_client.cc  duct_echo_server.cc  pipe_test.cc  qos_test.cc  shm_test.cc  utils_example.cc
include/duct/: address.h  async.h  convenience.h  duct.h  duct_export.h  logging.h  message.h  protocol.h  qos_pipe.h  queue.h  raii.h  socket_utils.h  status.h  utils.h  wire.h
src/: address.cc  duct.cc  logging.cc  message.cc  pipe_transport.cc  qos_pipe.cc  queue.cc  reconnect_pipe.cc  reconnect_pipe.h  shm_transport.cc  socket_utils.cc  state_callback_pipe.cc  state_callback_pipe.h  tcp_transport.cc  uds_transport.cc  win_shm.cc  wire.cc
tests/: duct_tests.cc
